fixed code and spacing in contact page and component

--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -10,3 +10,8 @@ div > a{
 div > a:hover{
     color: crimson;
 }
+
+#contactImg{
+    height: 400px;
+    width: 500px;
+}
