--- a/src/components/Intro/style.css
+++ b/src/components/Intro/style.css
@@ -9,9 +9,9 @@
 }
 
 #size{
-    font-size: 75px;
+    font-size: 70px;
 }
 
-footer{
+/* footer{
     position:absolute;
-}
+} */
