--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body{
   background: linear-gradient(to bottom right, rgb(7, 2, 78), rgb(3, 206, 233));
 }
